tests/error/abstract.gw
#! [contains] is abstract, declare as ref
var Shred shred;
